Added a link to get back to the home page from both projects

--- a/unit1.html
+++ b/unit1.html
@@ -8,7 +8,7 @@
   </head>
   <body>
     <script src="script.js"></script>
-
+    <p><a href="index.html"> Home </a></p>
     <h1> Unit 1 Project </h1>
     <h3> What is Soccer? </h3>
     <p> Association football, more commonly known as simply football or soccer, is a team sport played with a spherical ball between two teams of 11 players.<br>(It is played by approximately 250 million players in over 200 countries and dependencies, making it the world's most popular sport.)<br> The game is played on a rectangular field called a pitch with a goal at each end. The object of the game is to score more goals than the opposition by moving the ball beyond the goal line into the opposing goal, usually within a time frame of 90 or more minutes.</p>
