--- a/unit2.html
+++ b/unit2.html
@@ -9,7 +9,7 @@
   <body>
     <script src="script.js"></script>
   </body> 
-
+   <p><a href="index.html"> Home </a></p>
   <header>
     <h1> VolleyBall!</h1>
     <h3>History of Volleyball</h3>
